3981.	[bug]		Cache DS/NXDOMAIN independently of other query types.
			[RT #37467]

3978.	[test]		Added a unit test for Diffie-Hellman key
			computation, completing change #3974. [RT #37477]

3976.	[bug]		When refreshing managed-key trust anchors, clear
			any cached trust so that they will always be
			revalidated with the current set of secure
			roots. [RT #37506]

3974.	[bug]		Handle DH_compute_key() failure correctly in
			openssldh_link.c. [RT #37477]

3972.	[bug]		Fix host's usage statement. [RT #37397]

3971.	[bug]		Reduce the cascasding failures due to a bad $TTL line
			in named-checkconf / named-checkzone. [RT #37138]

3970.   [contrib]       Fixed a use after free bug in the SDB LDAP driver.
			[RT #37237]

3968.	[bug]		Silence spurious log messages when using 'named -[46]'.
			[RT #37308]

3967.	[test]		Add test for inlined signed zone in multiple views
			with different DNSKEY sets. [RT #35759]

3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
			[RT #35746]

3962.	[bug]		'dig +topdown +trace +sigchase' address unhandled error
			conditions. [RT #34663]

3961.	[bug]		Forwarding of SIG(0) signed UPDATE messages failed with
			BADSIG.  [RT #37216]

3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references
			in named.conf. [RT #37172]

3957.	[bug]		"dnssec-keygen -S" failed for ECCGOST, ECDSAP256SHA256
			and ECDSAP384SHA384. [RT #37183]

3955.	[bug]		Notify messages due to changes are no longer queued
			behind startup notify messages. [RT #24454]

3954.	[bug]		Unchecked mutex init in dlz_dlopen_driver.c [RT #37112]

3953.	[bug]		Don't escape semi-colon in TXT fields. [RT #37159]

3952.	[bug]		dns_name_fullcompare failed to set *nlabelsp when the
			two name pointers were the same. [RT #37176]

	--- 9.9.6 released ---
