@@ -3866,6 +3866,7 @@ AC_CONFIG_FILES([
 	doc/xsl/isc-docbook-html.xsl
 	doc/xsl/isc-docbook-latex.xsl
 	doc/xsl/isc-manpage.xsl
+	doc/xsl/isc-notes-latex.xsl
 	isc-config.sh
 	lib/Makefile
 	lib/bind9/Makefile
