@@ -1,0 +1,80 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+ - Copyright (C) 2014  Internet Systems Consortium, Inc. ("ISC")
+ -
+ - Permission to use, copy, modify, and/or distribute this software for any
+ - purpose with or without fee is hereby granted, provided that the above
+ - copyright notice and this permission notice appear in all copies.
+ -
+ - THE SOFTWARE IS PROVIDED "AS IS" AND ISC DISCLAIMS ALL WARRANTIES WITH
+ - REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
+ - AND FITNESS.  IN NO EVENT SHALL ISC BE LIABLE FOR ANY SPECIAL, DIRECT,
+ - INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
+ - LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE
+ - OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
+ - PERFORMANCE OF THIS SOFTWARE.
+-->
+
+<sect1 xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="noteversion.xml"/>
+  <sect2 id="relnotes_intro">
+    <title>Introduction</title>
+    <para>
+      This document summarizes changes since the last production release
+      of BIND on the corresponding major release branch.
+    </para>
+  </sect2>
+  <sect2 id="relnotes_download">
+    <title>Download</title>
+    <para>
+      The latest versions of BIND 9 software can always be found at
+      <ulink url="http://www.isc.org/downloads/"
+	>http://www.isc.org/downloads/</ulink>.
+      There you will find additional information about each release,
+      source code, and pre-compiled versions for Microsoft Windows
+      operating systems.
+    </para>
+  </sect2>
+  <sect2 id="relnotes_security">
+    <title>Security Fixes</title>
+    <itemizedlist>
+      <listitem>
+	<para>None</para>
+      </listitem>
+    </itemizedlist>
+  </sect2>
+  <sect2 id="relnotes_features">
+    <title>New Features</title>
+    <itemizedlist>
+      <listitem>
+	<para>None</para>
+      </listitem>
+    </itemizedlist>
+  </sect2>
+  <sect2 id="relnotes_changes">
+    <title>Feature Changes</title>
+    <itemizedlist>
+      <listitem>
+	<para>None</para>
+      </listitem>
+    </itemizedlist>
+  </sect2>
+  <sect2 id="relnotes_features">
+    <title>Bug Fixes</title>
+    <itemizedlist>
+      <listitem>
+	<para>None</para>
+      </listitem>
+    </itemizedlist>
+  </sect2>
+  <sect2 id="relnotes_thanks">
+    <title>Thank You</title>
+    <para>
+      Thank you to everyone who assisted us in making this release possible.
+      If you would like to contribute to ISC to assist us in continuing to
+      make quality open source software, please visit our donations page at
+      <ulink url="http://www.isc.org/donate/"
+	>http://www.isc.org/donate/</ulink>.
+    </para>
+  </sect2>
+</sect1>
